# kaspa-trail

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  Makefile  pyproject.toml
backend/src/forensics/: __init__.py  cache.py  graph_builder.py  kaspa_client.py  main.py  models.py  price.py
backend/tests/: test_graph_builder.py
frontend/: .dockerignore  Dockerfile  next.config.ts  package-lock.json  package.json  postcss.config.js  tsconfig.tsbuildinfo
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: AddressSearch.tsx  GraphControls.tsx  GraphView.tsx  InfoPanel.tsx  TxList.tsx
frontend/src/lib/: api.ts  caseStore.ts  format.ts  graphAnalysis.ts
